--- a/src/app/pages/holding/holding.component.html
+++ b/src/app/pages/holding/holding.component.html
@@ -2,22 +2,26 @@
     <h1 class="text-center stox-title">Holding</h1>
     <h2 class="text-center stox-sub-title"> As on Date 06-12-2023</h2>
     <ng-container>
-        <form class="row g-3 mb-3">
+        <form class="row g-3 mb-3" [formGroup]="holdingGroup" (ngSubmit)="save()">
             <div class="col-md-6">
                 <label for="inputPassword4" class="form-label">As On Date</label>
-                <input type="date" class="form-control" id="to">
+                <input type="date" class="form-control" id="to" [formControl]="f.AsOnDate">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Rate Date</label>
+                <input type="date" class="form-control" id="to" [formControl]="f.RateDate">
             </div>
             <div class="col-md-6">
                 <label for="inputPassword4" class="form-label">Scrip Code</label>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" aria-label="Recipient's username"
-                        aria-describedby="button-addon2">
+                        aria-describedby="button-addon2" [formControl]="f.ScripCode">
                     <button class="btn btn-outline-secondary" type="button" id="button-addon2">
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </button>
                 </div>
             </div>
-            <div class="col-md-6 mt-0">
+            <!-- <div class="col-md-6 mt-0">
                 <label for="inputState" class="form-label">Variance Type</label>
                 <select id="inputState" class="form-select">
                     <option selected value="VARELM">VARELM</option>
@@ -34,7 +38,7 @@
                     <option selected value="CLIENT">CLIENT</option>
                     <option value="PLANE">PLANE</option>
                 </select>
-            </div>
+            </div> -->
             <div class="col-12 text-end">
                 <button type="submit" class="btn btn-primary">Run</button>
             </div>
