--- a/src/app/pages/Reports/derivative-bills-summary/derivative-bills-summary.component.html
+++ b/src/app/pages/Reports/derivative-bills-summary/derivative-bills-summary.component.html
@@ -2,10 +2,18 @@
     <h1 class="text-center stox-title">Bill Summary Derivative</h1>
     <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
     <ng-container>
-        <form class="row g-3 mb-3">
+        <form class="row g-3 mb-3" [formGroup]="derivativeBillGroup" (ngSubmit)="save()">
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">From Date</label>
+                <input type="date" class="form-control" id="from" [formControl]="f.FromDate">
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">To Date</label>
+                <input type="date" class="form-control" id="to" [formControl]="f.ToDate">
+            </div>
             <div class="col-md-6">
                 <label for="inputState" class="form-label">Exchange</label>
-                <select id="inputState" class="form-select">
+                <select id="inputState" class="form-select" [formControl]="f.Exchange">
                     <option selected value="NSE">NSE</option>
                     <option value="BSE">BSE</option>
                     <option value="MCX">MCX</option>
@@ -13,19 +21,15 @@
             </div>
             <div class="col-md-6">
                 <label for="inputState" class="form-label">Segment</label>
-                <select id="inputState" class="form-select">
-                    <option selected value="COM">COM</option>
+                <select id="inputState" class="form-select" [formControl]="f.Segment">
+                    <option value="COM">COM</option>
                     <option value="CUR">CUR</option>
-                    <option value="FNO">FNO</option>
+                    <option selected value="FNO">FNO</option>
                 </select>
             </div>
             <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">From Date</label>
-                <input type="date" class="form-control" id="From">
-            </div>
-            <div class="col-md-6">
-                <label for="inputPassword4" class="form-label">To Date</label>
-                <input type="date" class="form-control" id="to">
+                <label for="inputPassword4" class="form-label">Bill No</label>
+                <input type="text" class="form-control" id="to" [formControl]="f.BillNo">
             </div>
             <div class="col-12 text-end">
                 <button type="submit" class="btn btn-primary">Run</button>
