--- a/src/app/pages/Reports/equity-bills-summary/equity-bills-summary.component.html
+++ b/src/app/pages/Reports/equity-bills-summary/equity-bills-summary.component.html
@@ -2,22 +2,34 @@
     <h1 class="text-center stox-title">Equity Bill Summary</h1>
     <h2 class="text-center stox-sub-title"> From 01-12-2023 To 31-03-2024</h2>
     <ng-container>
-        <form class="row g-3 mb-3">
-            <div class="col-md-12">
-                <label for="inputState" class="form-label">Exchange</label>
-                <select id="inputState" class="form-select">
-                    <option selected>Choose...</option>
-                    <option value="NSE">NSE</option>
-                    <option value="BSE">BSE</option>
-                </select>
-            </div>
+        <form class="row g-3 mb-3" [formGroup]="equityBillGroup" (ngSubmit)="save()">
             <div class="col-md-6">
-                <label for="inputEmail4" class="form-label">From Date</label>
-                <input type="date" class="form-control" id="From">
+                <label for="inputPassword4" class="form-label">From Date</label>
+                <input type="date" class="form-control" id="from" [formControl]="f.FromDate">
             </div>
             <div class="col-md-6">
                 <label for="inputPassword4" class="form-label">To Date</label>
-                <input type="date" class="form-control" id="to">
+                <input type="date" class="form-control" id="to" [formControl]="f.ToDate">
+            </div>
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Exchange</label>
+                <select id="inputState" class="form-select" [formControl]="f.Exchange">
+                    <option selected value="NSE">NSE</option>
+                    <option value="BSE">BSE</option>
+                    <option value="MCX">MCX</option>
+                </select>
+            </div>
+            <div class="col-md-6">
+                <label for="inputState" class="form-label">Segment</label>
+                <select id="inputState" class="form-select" [formControl]="f.Segment">
+                    <option value="COM">COM</option>
+                    <option value="CUR">CUR</option>
+                    <option selected value="FNO">FNO</option>
+                </select>
+            </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Bill No</label>
+                <input type="text" class="form-control" id="to" [formControl]="f.BillNo">
             </div>
             <div class="col-12 text-end">
                 <button type="submit" class="btn btn-primary">Run</button>
