--- a/src/app/pages/layout/side-bar/side-bar.component.html
+++ b/src/app/pages/layout/side-bar/side-bar.component.html
@@ -11,58 +11,60 @@
         </li><!-- End Dashboard Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+            <a id="report" class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
                 <i class="bi bi-journal-text"></i>
                 <span class="menu-name">Reports</span>
                 <i class="down-arrow bi bi-chevron-down ms-auto"></i>
             </a>
-            <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
-                    <a routerLinkActive='active' routerLink="/home/bill-summary-equity">
-                        <i class="bi bi-circle"></i><span>Equity Bills Summary</span>
-                    </a>
-                </li>
-                <li>
-                    <a routerLinkActive='active' routerLink="/home/equity-trade-confirmation">
-                        <i class="bi bi-circle"></i><span>Equity Trade Confirmation</span>
-                    </a>
-                </li>
-                <li>
-                    <a routerLinkActive='active' routerLink="/home/equity-transaction-ledger">
-                        <i class="bi bi-circle"></i><span>Equity Transaction Ledger</span>
-                    </a>
-                </li>
-                <li>
-                    <a routerLinkActive='active' routerLink="/home/bill-summary-derivative">
-                        <i class="bi bi-circle"></i><span>Derivative Bills Summary</span>
-                    </a>
-                </li>
-                <li>
-                    <a routerLinkActive='active' routerLink="/home/pl-statement">
-                        <i class="bi bi-circle"></i><span>Derivative P&L Statement</span>
-                    </a>
-                </li>
-                <li>
-                    <a routerLinkActive='active' routerLink="/home/long-short">
-                        <i class="bi bi-circle"></i><span>Equity P&L Report</span>
-                    </a>
-                </li>
-                <li>
-                    <a routerLinkActive='active' routerLink="/home/FIFO-net-position">
-                        <i class="bi bi-circle"></i><span>Derivative P&L(FIFO) Report</span>
-                    </a>
-                </li>
-                <li>
-                    <a routerLinkActive='active' routerLink="/home/year-end-report">
-                        <i class="bi bi-circle"></i><span>Year End Report</span>
-                    </a>
-                </li>
-                <li>
-                    <a routerLinkActive='active' routerLink="/home/MTF-detail-statement">
-                        <i class="bi bi-circle"></i><span>MTF Detail Statement</span>
-                    </a>
-                </li>
-            </ul>
+            <div id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <ul class="p-0">
+                    <li>
+                        <a routerLinkActive='active' routerLink="/home/bill-summary-equity">
+                            <i class="bi bi-circle"></i><span>Equity Bills Summary</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLinkActive='active' routerLink="/home/equity-trade-confirmation">
+                            <i class="bi bi-circle"></i><span>Equity Trade Confirmation</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLinkActive='active' routerLink="/home/equity-transaction-ledger">
+                            <i class="bi bi-circle"></i><span>Equity Transaction Ledger</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLinkActive='active' routerLink="/home/bill-summary-derivative">
+                            <i class="bi bi-circle"></i><span>Derivative Bills Summary</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLinkActive='active' routerLink="/home/pl-statement">
+                            <i class="bi bi-circle"></i><span>Derivative P&L Statement</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLinkActive='active' routerLink="/home/long-short">
+                            <i class="bi bi-circle"></i><span>Equity P&L Report</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLinkActive='active' routerLink="/home/FIFO-net-position">
+                            <i class="bi bi-circle"></i><span>Derivative P&L(FIFO) Report</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLinkActive='active' routerLink="/home/year-end-report">
+                            <i class="bi bi-circle"></i><span>Year End Report</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLinkActive='active' routerLink="/home/MTF-detail-statement">
+                            <i class="bi bi-circle"></i><span>MTF Detail Statement</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </li><!-- End Forms Nav -->
 
         <li class="nav-item">
